# essai

./: CONTRIBUTORS.md  LICENSE.md  README.md
Agent/ADK/: README.md
Backend/: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
Backend/src/app/: __init__.py  config.py  database.py  enums.py  main.py  models.py  routes.py  schemas.py
Backend/src/app/crud/: __init__.py  cloudsql.py  pubsub.py
Frontend/: Procfile  main.py  requirements.txt  var_environment.py
Frontend/Prompts/: template-correcao-enem.yml.j2  template-sumarizacao-enem.yml.j2
Frontend/corretor_gemini/: README.md  gemini_corretor.py
Frontend/data/: exemplo-0.json  exemplo-1.json  exemplo-10.json  exemplo-11.json  exemplo-12.json  exemplo-13.json  exemplo-14.json  exemplo-15.json  exemplo-16.json  exemplo-17.json  exemplo-18.json  exemplo-19.json  exemplo-2.json  exemplo-20.json  exemplo-21.json  exemplo-22.json  exemplo-23.json  exemplo-24.json  exemplo-25.json  exemplo-26.json  exemplo-27.json  exemplo-28.json  exemplo-29.json  exemplo-3.json  exemplo-30.json  exemplo-31.json  exemplo-32.json  exemplo-33.json  exemplo-34.json  exemplo-35.json  exemplo-36.json  exemplo-37.json  exemplo-38.json  exemplo-39.json  exemplo-4.json  exemplo-40.json  exemplo-41.json  exemplo-42.json  exemplo-43.json  exemplo-44.json  (+10 more)
Frontend/st_pages/: corrigir.py
Frontend/utils/: __init__.py  display.py  (+4 more)
IAC/: main.tf  svc.json  terraform.tfvars  variables.tf
docs/: accessing-api.md  concepts-architecture.md  deploying-essai.md  playing-essays.md  translating-responses.md
(+64 files in other folders)
